--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "accordeon-component",
+  "name": "accordion-component",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
